# Skypro_21

./: .gitignore  README.md  file  main.py  main_file.py  math_operation.py  revers_text.py  str_func.py
PycharmProjects/Kursova_3/: .gitignore  README.md  main.py  utils.py
PycharmProjects/Kursova_3/.pytest_cache/v/cache/: lastfailed
PycharmProjects/Kursova_3/tests/: conftest.py  test_utils.py
PycharmProjects/pythonProject3/: func.py  main.py  pyproject.toml  test_utils.py  utils.py
git_project/src/: pyproject.toml
git_project/src/energyid/: pyproject.toml  requirements.txt
git_project/src/energyid/project1/project2/project3/: .gitignor  pyproject.toml
git_project/src/energyid/project1/project2/project3/project3/: cli.py
git_project/src/project5/: pyproject.toml
