[tool.poetry]
name = "sky-pyhon"
version = "0.1.0"
description = ""
authors = ["RmanKartavcev <128297080+Ramzes8@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sky_pyhon"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
