[tool.poetry.scripts]
name = "project3"
version = "0.1.0"
description = ""
authors = ["RmanKartavcev <128297080+Ramzes8@users.noreply.github.com>"]
readme = "README.md"
say-weclome = "src.cli:welcome"

[tool.poetry.dependencies]
python = "^3.11"
pyz = "^0.4.3"
django = "4.1"
pytest = "^7.2.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
